# lyric-fetch-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/lyric_fetch_mcp/: __init__.py  server.py
