[project]
name = "lyric-fetch-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Deupree", email = "nicholasdeupree@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "lyricsgenius>=3.7.5",
]

license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["mcp", "fastmcp", "lyrics", "genius", "llm"]

[project.scripts]
lyric-fetch-mcp = "lyric_fetch_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
